<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"

    android:layout_marginTop="20dp"
    android:layout_marginRight="30dp"
    android:layout_marginBottom="30dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/profileLayout"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_plantprofilename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="Plant Profile Name:"
                    android:textColor="@color/color2"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editProfileName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="Profile name"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/tv_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="Temperature:"
                    android:textColor="@color/color2"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/layouttemp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTempMin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center"
                        android:hint="MIN"
                        android:inputType="number"/>

                    <EditText
                        android:id="@+id/editTempMax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center"
                        android:hint="MAX"
                        android:inputType="number"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_co2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="CO2:"
                    android:textColor="@color/color2"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/layoutco2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editCo2Min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center"
                        android:hint="MIN"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/editCo2Max"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center"
                        android:hint="MAX"
                        android:inputType="number" />
                </LinearLayout>


                <TextView
                    android:id="@+id/tv_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="Light:"
                    android:textColor="@color/color2"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/layoutlight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editLightMin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center"
                        android:hint="MIN"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/editLightMax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center"
                        android:hint="MAX"
                        android:inputType="number" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="Humidity:"
                    android:textColor="@color/color2"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/layouthumidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editHumidityMin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center"
                        android:hint="MIN"
                        android:inputType="number" />

                    <EditText
                        android:id="@+id/editHumidityMax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:fontFamily="@font/montserrat"
                        android:gravity="center"
                        android:hint="MAX"
                        android:inputType="number" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:background="@color/color2"
                        android:clickable="true"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="Clear"
                        android:textColor="@color/colorWhite" />

                    <Button
                        android:id="@+id/btn_save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/color2"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="Save"
                        android:textColor="@color/colorWhite" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>