...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:inputType="textEmailAddress"
        android:shadowColor="#F9F9F9"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.528" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:inputType="textPassword"
        android:textSize="20sp"
...
            android:background="@color/color2"
            android:fontFamily="@font/montserrat_bold"
            android:text="Sign Up"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/color2"
            android:fontFamily="@font/montserrat_bold"
            android:text="LOG IN"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
...
