...
    <item
        android:id="@+id/navigation_plant"

        android:title="plant" />

    <item
        android:id="@+id/navigation_plantProfile"

        android:title="plant profile" />

</menu>

